syntax = "proto3";

service TemperatureService{
    rpc setTemperature (Temperature) returns (Empty) {}
}

message Empty{}

message Temperature{
    int32 TemperatureValue = 1;
}